--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "puppeteer": "^17.1.0",
     "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-recaptcha": "^3.6.6"
+    "puppeteer-extra-plugin-recaptcha": "^3.6.6",
+    "winston": "^3.8.2"
   }
 }
